# building-effective-agents

./: .gitignore  README.md
01-the-augmented-LLM/pydanticai_agents/: README.md  pyproject.toml  requirements.txt
01-the-augmented-LLM/pydanticai_agents/src/pydanticai_agents/: main.py
01-the-augmented-LLM/pydanticai_agents/src/pydanticai_agents/agents/: __init__.py  base_agent.py  sales_agent.py
01-the-augmented-LLM/pydanticai_agents/src/pydanticai_agents/clients/: __init__.py  db_client.py
01-the-augmented-LLM/pydanticai_agents/src/pydanticai_agents/models/: db_models.py
01-the-augmented-LLM/pydanticai_agents/src/pydanticai_agents/tools/: twitter_tools.py
